syntax = "proto3";
package naki3d.common.protocol;

// Reverse conrtol
enum CECAction {
    POWER_ON = 0;
    POWER_OFF = 1;
    // TODO: Brightness, saturation, etc...
}

message CECMessage {
    CECAction action = 1;
}